--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
 
   <section id="main" style="display:none;">
     <div class="container-fluid">
-      <h1 class="text-center">Foodmap</h1>
-      <div class="square square-left"></div>
-      <hr>
-      <div class="square square-right"></div>
-      <div class="col-lg-4 col-lg-offset-2 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 maparea">
-        <div id="map"></div>
-      </div>
-
-      <h3 class="text-center">Comida cerca de ti</h3>
+      <!-- Encabezado -->
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-sm-12 col-xs-12">
+          <h1 class="text-center colorh">Foodmap</h1>
+          <div class="square square-left"></div>
+          <hr>
+          <div class="square square-right"></div>
+        </div>
+      </div>
+      <!-- Mapa -->
+      <div class="row">
+        <div class="col-lg-4 col-lg-offset-2 col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 maparea">
+          <div id="map"></div>
+        </div>
+        <h3 class="text-center colorh">Comida cerca de ti</h3>
+      </div>
+      <!-- Buscador -->
+      <div class="row">
+        <div class="col-sm-8 col-xs-8 col-xs-offset-2 col-sm-offset-2">
           <div class="input-group">
             <input type="text" class="form-control" id="search" placeholder="¿Qué buscas?...">
             <span class="input-group-btn">
-                  <button class="btn btn-default" type="button" id="searchbtn"><i class="fa fa-search" aria-hidden="true" ></i></button>
-                </span>
+              <button class="btn btn-default" type="button" id="searchbtn1">
+                <i class="fa fa-search" aria-hidden="true" ></i>
+              </button>
+            </span>
           </div>
-          <ul id="myUL">
-            <li><a href="#">Fastfood</a></li>
-            <li><a href="#">Antojitos</a></li>
-            <li><a href="#">Corrida</a></li>
-            <li><a href="#">cafetería</a></li>
-          </ul>
         </div>
       </div>
   </section>
 
-  <section id="main" style="display:none;">
-    <div class="container" id="cont-food">
+  <section id="main">
+    <!-- id section food -->
+    <div class="row">
+      <div class="col-sm-10 col-xs-10 col-sm-offset-1 col-xs-offset-1 " id="cont-food">
+        <!-- Imágenes de los restaurantes -->
+        <div class="foodcont">
 
-      <div class="row">
-        <div class="col-xs-12 col-xs-offset-1">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
-          <img src="http://dummyimage.com/100x100" data-toggle="modal" data-target="#modal-food">
         </div>
       </div>
     </div>
@@ -66,21 +66,23 @@
 
   <!-- Modal -->
 
-  <div class="modal fade" id="modal-food" tabindex="-1" role="dialog" aria-labelledby="modalFood">
-    <div class="modal-dialog" role="document">
+  <div class="modal fade bs-example-modal-sm" id="modal-food" tabindex="-1" role="dialog" aria-labelledby="modalFood">
+    <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+          <h4 class="modal-title" id="exampleModalLabel">Ubicación</h4>
         </div>
         <div class="modal-body">
-          <img src="http://dummyimage.com/100x100" alt="">
-
-          <p>Dirección:</p>
-          <p>Descripción:</p>
-          <p>Precio:</p>
-          <p>Servicio:</p>
-
+          <div class="row">
+            <div class="col-sm-12" id="mapa">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15049.539355506155!2d-99.14008094999998!3d19.43896775!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1516483868947" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+          </div>
+          <h2 id="name-mod">Nombre:</h2>
+          <h3 id="adress-mod">Dirección:</h3>
+          <h4 id="descript-mod">Descripción:</h4>
+          <h3 id="price-mod">Precio:</h3>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
